Fix path to rootDir in config

--- a/src/htrnaseq_meta_runner/nextflow.config
+++ b/src/htrnaseq_meta_runner/nextflow.config
@@ -1,5 +1,5 @@
 params {
-  rootDir = java.nio.file.Paths.get("$projectDir/../../../").toAbsolutePath().normalize().toString()
+  rootDir = java.nio.file.Paths.get("$projectDir/../../").toAbsolutePath().normalize().toString()
 }
 
 
